@@ -20,7 +20,6 @@
 -       Worked on User Story #4 until 15/17 tests were passing
 -       Had some odd things going on between local and remote repos. There were a lot of untracked changes after merging US-#5 to Main in GitHub. The problem seemed to be that the changes needed to be merged locally after a git pull request.
 -       Completed functions for User Story #6.
--       Completed front-end functions for User Stories #2 and 3.
 - db-connection:
 -       created db's for dev, test, preview & prod & connected them
 -       defined rows in "reservations" table
@@ -72,6 +71,9 @@
         "search" function in reservations.service to search for reservations 
         with a given phone number.
 - US-#8: (for User Story #8)
+<<<<<<< HEAD
+- F-US-#2: (front end for User Story #2)
+=======
 - issues-#x: created to correct issues with User Stories 4, 5 and 6 that
         emerged after the back end files were completed. Also renamed 
         the "update" and "edit" functions in the reservations table
@@ -79,4 +81,4 @@
 - F-US-#1 (F for front end, User Story #1)
 -       Wrote component NewReservation to create and save a new reservation. Also wrote a ReservationForm component that can be re-used that has the form with input fields. This can be used for create reservation, update reservation, and change status.
 -        Created previous, today and next buttons on dashboard. They work locally but I'm unable to run tests.
-- F-US-#2: (front end for User Story #2)
+>>>>>>> 06d858eb1496fdd83cb2b7f0ffe17506cd721779
